@@ -1,5 +1,9 @@
 2007-08-09  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/print/print-settings.c: store the selected paper-size.
+
+2007-08-09  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/splash.c: tweaked label positons.
 
 2007-08-09  Sven Neumann  <sven@gimp.org>
